--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "forever": "^2.0.0",
     "minimist": "^1.2.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.27",
